public class Main {
    public static void main(String[] args) {

        System.out.println("Witamy w sklepie internetowym.");
        Menu menu = new Menu();
        menu.menu();


    }
}